--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|pub|store|tmp|jobs)
+RewriteCond $1 !^(index\.php|pub|store|tmp|api|jobs)
 RewriteRule ^(.*)$ index.php/$1 [L]
