nueva modalidad para crear conexiones a BD

--- a/pan/app_config.php.example
+++ b/pan/app_config.php.example
@@ -62,6 +62,11 @@ $app_config = array(
     'app_view_debug' => true,
 
     /**
+     * Habilitar registro de auditorias de querys
+     */
+    'app_db_audit' => false,
+
+    /**
      * Define ubicación para almacenar y guardar ficheros dentro de la aplicación
      */
     'app_storage' => 'store'
